--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -2,13 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Social Login Release</title>
+		<title>AnoSoLog</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
-	<body>
-		<h1>Login</h1>
-		<div>
-			<a href="/oauth2/authorization/google">Login with Google</a>
+	<body class="min-h-screen flex items-center bg-gray-200">
+		<div class="flex flex-col items-center text-center w-1/2 mx-auto bg-white rounded p-12 shadow">
+			<img class="w-1/4 mx-auto mb-8" src="/assets/logo.png"/>
+			<a class="rounded p-4 bg-sky-800 text-white" href="/oauth2/authorization/google">Login with Google</a>
 		</div>
 	</body>
 </html>
