--- a/src/main/resources/static/verify.html
+++ b/src/main/resources/static/verify.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Verification</title>
-</head>
-<body>
-	<h1>Social Login Release Verification</h1>
-	<img src="/verify" alt="QR Verification"/>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Verification</title>
+		<script src="https://cdn.tailwindcss.com"></script>
+	</head>
+	<body class="min-h-screen flex items-center">
+		<div style="background-color: #FAFAFA" class="w-1/2 mx-auto flex p-8 shadow">
+			<p class="mb-4 self-center">Scan the QR code with AnoSoLog to verify your identity</p>
+			<img class="h-72 w-72 mx-auto" src="/verify" alt="QR Verification"/>
+		</div>
+	</body>
 </html>
